--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,25 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background: #f5f6f7;
+    background: #383f45;
 }
 
 .header {
     text-align: center;
     text-transform: uppercase;
     padding: 32px;
-    background-color: #0a0a23;
+    background-color: black;
     color: #fff;
-    border-bottom: 4px solid #fdb347;
+    border-bottom: 4px solid white;
+}
+
+.footer {
+    text-align: center;
+    font-size: x-small;
+    padding: 32px;
+    background-color: black;
+    color: #fff;
+    border-top: 4px solid white;
 }
 
 .gallery {
@@ -24,6 +33,7 @@ body {
     justify-content: center;
     align-items: center;
     max-width: 1400px;
+    gap: 16px;
     margin: 0 auto;
     padding: 20px 10px;
   }
@@ -33,5 +43,7 @@ body {
     max-width: 300px;
     max-height: 350px;
     object-fit: cover;
+    border-radius: 5px;
+    box-shadow: black;
   }
   
